fix navbar height on small screens

--- a/frontend/stylesheets/trace_view/_tracing_view.less
+++ b/frontend/stylesheets/trace_view/_tracing_view.less
@@ -293,6 +293,17 @@ img.keyboard-mouse-icon:first-child {
   }
 }
 
+.navbar-header {
+  padding: 0;
+  overflow-x: auto;
+  overflow-y: hidden;
+  position: fixed;
+  height: @navbar-height !important; // without important, this gets overriden on small screens
+  display: flex;
+  alignitems: center;
+  whitespace: nowrap;
+}
+
 .navbar-header,
 .statusbar-footer {
   // Dark mode for UI within navbar and footer
